--- a/app/src/main/res/layout/activity_story_list.xml
+++ b/app/src/main/res/layout/activity_story_list.xml
@@ -6,6 +6,7 @@
     android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_100"
     tools:context=".views.storylist.StoryListActivity">
 
     <ProgressBar
