--- a/app/src/main/res/layout/item_story_card.xml
+++ b/app/src/main/res/layout/item_story_card.xml
@@ -17,7 +17,7 @@
         android:padding="8dp">
 
         <ImageView
-            android:id="@+id/story_image"
+            android:id="@+id/story_image_iv"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:contentDescription="@string/story_image_alt"
@@ -25,21 +25,6 @@
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <TextView
-            android:id="@+id/story_desc_tv"
-            android:layout_width="353dp"
-            android:layout_height="25dp"
-            android:layout_marginVertical="8dp"
-            android:layout_marginTop="4dp"
-            android:textAlignment="viewStart"
-            android:textSize="16sp"
-            android:visibility="visible"
-            card_view:layout_constraintEnd_toEndOf="@id/story_title_tv"
-            card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintStart_toStartOf="@id/story_title_tv"
-            card_view:layout_constraintTop_toBottomOf="@id/story_title_tv"
-            tools:text="Story Description" />
 
         <TextView
             android:id="@+id/story_title_tv"
@@ -51,11 +36,29 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="18sp"
             android:textStyle="bold"
-            card_view:layout_constraintEnd_toEndOf="@id/story_image"
+            card_view:layout_constraintEnd_toEndOf="@id/story_image_iv"
             card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@id/story_image"
+            card_view:layout_constraintTop_toBottomOf="@id/story_image_iv"
             tools:text="Story Title" />
+
+        <TextView
+            android:id="@+id/story_desc_tv"
+            android:layout_width="353dp"
+            android:layout_height="25dp"
+            android:layout_marginVertical="8dp"
+            android:layout_marginTop="4dp"
+            android:textAlignment="viewStart"
+            android:textSize="16sp"
+            android:visibility="visible"
+            android:scrollHorizontally="false"
+            android:ellipsize="end"
+            android:maxLines="2"
+            card_view:layout_constraintEnd_toEndOf="@id/story_title_tv"
+            card_view:layout_constraintHorizontal_bias="0.0"
+            card_view:layout_constraintStart_toStartOf="@id/story_title_tv"
+            card_view:layout_constraintTop_toBottomOf="@id/story_title_tv"
+            tools:text="Story Description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
