--- a/app/src/main/res/layout/activity_story_detail.xml
+++ b/app/src/main/res/layout/activity_story_detail.xml
@@ -4,6 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_200"
     tools:context=".views.storydetail.StoryDetailActivity">
+
+    <ImageView
+        android:id="@+id/story_detail_image_iv"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="108dp"
+        android:contentDescription="@string/story_detail_image_alt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <TextView
+        android:id="@+id/story_detail_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/story_detail_image_iv"
+        tools:ignore="TextContrastCheck"
+        tools:text="Story Title" />
+
+    <TextView
+        android:id="@+id/story_detail_date_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="16dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/story_detail_title_tv"
+        tools:ignore="TextContrastCheck"
+        tools:text="Created At" />
+
+    <TextView
+        android:id="@+id/story_detail_desc_tv"
+        android:layout_width="353dp"
+        android:layout_height="25dp"
+        android:layout_marginVertical="8dp"
+        android:layout_marginTop="12dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:scrollHorizontally="false"
+        android:textAlignment="viewStart"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/story_detail_date_tv"
+        tools:ignore="TextContrastCheck"
+        tools:text="Story Description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
