--- a/app/src/main/res/menu/option_menu_post_login.xml
+++ b/app/src/main/res/menu/option_menu_post_login.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:itemBackground="@color/purple_100">
+    <item android:id="@+id/story_map"
+        android:title="@string/menu_maps"
+        android:icon = "@drawable/ic_baseline_map_24"
+        app:showAsAction="ifRoom" />
     <item android:id="@+id/settings"
         android:title="@string/menu_settings"
         android:icon = "@drawable/ic_baseline_settings_24"
