--- a/app/src/main/res/layout/activity_story_upload.xml
+++ b/app/src/main/res/layout/activity_story_upload.xml
@@ -23,6 +23,15 @@
             app:srcCompat="@drawable/ic_place_holder"
             tools:ignore="ImageContrastCheck,ImageContrastCheck" />
 
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/sw_is_using_location"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:minHeight="48dp"
+            android:text="@string/sw_is_using_location_text" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,6 +80,7 @@
                 android:textColor="@android:color/black"
                 android:scrollbars="vertical"
                 tools:ignore="SpeakableTextPresentCheck" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
